--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
